--- a/src/modules/try-signoz-cta/styles.module.css
+++ b/src/modules/try-signoz-cta/styles.module.css
@@ -4,12 +4,13 @@
   /* padding: 4rem 0 3rem; */
   width: 100%;
   margin: 4.5rem 0;
+ 
 }
 .cta .tagline {
   font-family: "Work Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: -0.015em;
   margin-bottom: 1.5rem;
@@ -17,7 +18,8 @@
 .cta .contentWrapper {
   background: #f25733;
   border-radius: 6px;
-  padding: 3.5rem 0;
+  padding: 1rem 0;
+  margin: 0 4.5rem;
   text-align: center;
 }
 @media (max-width: 996px) {
