--- a/src/modules/try-signoz-cta/styles.module.css
+++ b/src/modules/try-signoz-cta/styles.module.css
@@ -9,7 +9,7 @@
   font-family: "Work Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: -0.015em;
   margin-bottom: 1.5rem;
@@ -17,7 +17,8 @@
 .cta .contentWrapper {
   background: #f25733;
   border-radius: 6px;
-  padding: 3.5rem 0;
+  padding: 1rem 0;
+  margin: 0 4.5rem;
   text-align: center;
 }
 @media (max-width: 996px) {
